@startuml project_team
title Project and Team Management

top to bottom direction

skinparam shadowing false
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #2C5F8A
skinparam classHeaderBackgroundColor #D6E4F0
skinparam packageBackgroundColor #EAF2FF
skinparam packageBorderColor #1F4E79
skinparam packageFontColor #1F4E79
skinparam defaultFontName Helvetica
skinparam defaultFontSize 12
skinparam ArrowColor #444444
skinparam ArrowThickness 1.5
skinparam noteBorderColor #999999
skinparam noteBackgroundColor #FFFDE7
hide circle

enum ProjectStatus {
  DRAFT
  ACTIVE
  ON_HOLD
  COMPLETED
  CANCELLED
}

enum EngagementType {
  FORFAIT
  REGIE
}

class Project {
  - code : String
  - name : String
  - client : String
  - status : ProjectStatus
  - engagementType : EngagementType
  - initialBudget : BigDecimal
  - startDate : LocalDate
  - endDate : LocalDate
  --
  + assignProjectManager(pm : User) : void
  + addTeamMember(member : User) : void
  + computeRemainingBudget() : BigDecimal
}

class User {
  - firstName : String
  - lastName : String
  - email : String
}

class TeamAssignment {
  - roleInTeam : String
  - startDate : LocalDate
  - endDate : LocalDate
}

class Livrable {
  - designation : String
  - delivered : boolean
  - deliveryDate : LocalDate
  --
  + markDelivered() : void
}

class PartiePrenante {
  - nom : String
  - fonction : String
  - influence : NiveauRisque
}

Project "*"  -->  "1"   User            : director >
Project "*"  -->  "1..*" User           : project managers >
Project "1"  *--  "*"   TeamAssignment
TeamAssignment "*" --> "1" User         : member >
Project "1"  *--  "*"   Livrable
Project "1"  *--  "*"   PartiePrenante
Project      -->         ProjectStatus  : status >
Project      -->         EngagementType : engagement type >

note right of TeamAssignment
  Partial allocation possible (e.g. 50% across two projects); assignment history is preserved.
end note

@enduml
